RESOLVED FIXED196609
Log the error if VideoProcessing library cannot be dlopen
https://bugs.webkit.org/show_bug.cgi?id=196609
Summary Log the error if VideoProcessing library cannot be dlopen
youenn fablet
Reported 2019-04-04 09:07:45 PDT
Log the error if VideoProcessing library cannot be dlopen
Attachments
Patch (1.78 KB, patch)
2019-04-04 09:17 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2019-04-04 09:17:41 PDT
WebKit Commit Bot
Comment 2 2019-04-04 09:52:07 PDT
Comment on attachment 366721 [details] Patch Clearing flags on attachment: 366721 Committed r243873: <https://trac.webkit.org/changeset/243873>
WebKit Commit Bot
Comment 3 2019-04-04 09:52:08 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-04-04 09:53:16 PDT
Note You need to log in before you can comment on or make changes to this bug.