Log the error if VideoProcessing library cannot be dlopen https://bugs.webkit.org/show_bug.cgi?id=196609

Reviewed by Eric Carlson.

* Source/webrtc/sdk/WebKit/VideoProcessingSoftLink.cpp:
(webrtc::initVideoProcessingVPModuleInitialize):


Canonical link: https://commits.webkit.org/210868@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243873 268f45cc-cd09-0410-ab3c-d52691b4dbfc